# learn_ardupilot

./: .gitignore
arduino/blink/: blink.ino
catapult/: README.md
catapult/firmware/: CMakeLists.txt  idf_env.cmake  sdkconfig
catapult/firmware/main/: CMakeLists.txt  idf_component.yml  led_status.c  led_status.h  main.c  primitive.c  primitive.h
catapult/tools/: flash.ps1  flash.sh  qtcreator-esp-idf.ps1
experiments/distance_display/: distance_display.ino
experiments/distance_serial/: distance_serial.ino
experiments/encoder_blink/: encoder_blink.ino
experiments/encoder_stepper/: encoder_stepper.ino
experiments/ir_obstacle/: ir_obstacle.ino
experiments/laser_blink/: laser_blink.ino
experiments/sound_level/: sound_level.ino
